<resources>
    <string name="app_name">KV-MVP-Frame</string>

    <string name="title_news">新闻</string>
    <string name="title_video">视频</string>
    <string name="title_media">头条号</string>
    <string name="title_photo">图片</string>

    <string name="tab_title_home">精选</string>
    <string name="tab_title_find">发现</string>
    <string name="tab_title_hot">热门</string>
    <string name="tab_title_me">我的</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="transition_name">shareView</string>
    <string name="share_app_text">使用Kotlin开发的个人练手项目，多谢关注！</string>
    <string name="source_code_url">https://github.com/Vension/KV-MVP-Frame</string>

    <!-- 开眼相关 -->
    <string name="video_attention">+ 关注</string>
    <string name="video_offline">缓存</string>

    <string name="search_transition_name">transition_reveal</string>
    <string name="search_hint_text">帮你找到感兴趣的视频</string>
    <string name="search_title_tip">输入标题或描述中的关键词找到更多视频</string>
    <string name="search_hot_keywords_tip">- 热门搜索词 -</string>
    <string name="search_result_count">-「%1$s」搜索结果共%2$d个-</string>

    <!-- 头条相关-->
    <string name="search_you_want_to_search">搜你想搜的</string>
    <string name="to_top">置顶</string>
    <string name="hot">热</string>
    <string name="ad">广告</string>
    <string name="tag_movie">影视</string>
    <string name="comment">评论</string>
    <string name="img_unit">图</string>
    <string name="net_unavailable">网络不可用</string>
    <string name="new_mine_read_time">今日阅读\n18小时</string>
    <string name="video_play_count">%s次播放</string>
    <string name="detail_write_comment">写评论…</string>
    <string name="no_news_now">目前没有最新新闻了</string>
    <string name="focus">关注</string>
    <string name="net_error">网络异常，请检查后重试</string>
    <string name="search_hot">热门搜索</string>
    <string name="change_another">换一批</string>
    <string name="search_history">搜索历史</string>
    <string name="clear">清空</string>
    <string name="save">保存</string>
    <string name="subscribe">订阅</string>
    <string name="cancel">取消</string>
    <string name="error">发生错误</string>
    <string name="delete_all_search_history">是否删除所有搜索历史记录?</string>
    <string name="button_allow">允许</string>
    <string name="button_deny">拒绝</string>
    <string name="button_enter">确定</string>
    <string name="button_cancel">取消</string>
</resources>
