<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rel_frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent">


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_circle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:transitionName="@string/search_transition_name"
        app:backgroundTint="@color/app_main_backgroup_color"
        app:elevation="0dp"
        app:fabSize="normal"
        tools:targetApi="lollipop" />


    <LinearLayout
        android:id="@+id/rel_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_main_backgroup_color"
        android:orientation="vertical"
        android:visibility="gone">


        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <RelativeLayout
                android:id="@+id/rel_search_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">

                <com.vension.frame.views.ClearEditText
                    android:id="@+id/et_search_view"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_toStartOf="@+id/tv_cancel"
                    android:background="@drawable/shape_rect_bg_white_stoke_ddd_radius_5dip"
                    android:drawableLeft="@mipmap/ic_action_search_small"
                    android:drawablePadding="5dp"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:gravity="center_vertical"
                    android:hint="@string/search_hint_text"
                    android:imeOptions="actionSearch"
                    android:maxLines="1"
                    android:paddingStart="10dp"
                    android:singleLine="true"
                    android:textColor="@color/Color_aaaaaa"
                    android:textColorHint="@color/Color_666666"
                    android:textSize="12sp"
                    tools:ignore="RtlHardcoded,RtlSymmetry" />

                <TextView
                    android:id="@+id/tv_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:text="取消" />
            </RelativeLayout>
        </android.support.v7.widget.Toolbar>


        <LinearLayout
            android:id="@+id/layout_hot_words"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_title_tip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="40dp"
                android:layout_marginTop="30dp"
                android:text="@string/search_title_tip"
                android:textColor="@color/Color_aaaaaa"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_hot_search_words"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="15dp"
                android:text="@string/search_hot_keywords_tip"
                android:textColor="@color/app_main_text_color"
                android:textSize="14sp" />


            <android.support.v7.widget.RecyclerView
                android:id="@+id/mRecyclerView_hot"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_content_result"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/tv_search_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="30dp"
                android:text="@string/search_result_count"
                android:textColor="@color/app_main_text_color"
                android:textSize="12sp"
                android:textStyle="bold" />

            <com.vension.frame.views.MultipleStatusView
                android:id="@+id/multipleStatusView"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/mRecyclerView_result"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </com.vension.frame.views.MultipleStatusView>
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>